--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -17,6 +17,7 @@ $hover-color: #FF4A80;
 
     .logo-container {
       text-align: center;
+      margin-top: 25px;
     }
     
     .navbar {
